--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ form.sign-in-form {
   margin: 0;
   background: none;
   border: 3px solid #fff;
-  width: 130px;
+  width: 140px;
   height: 41px;
   font-weight: 600;
   box-shadow: none;
@@ -403,3 +403,54 @@ form.sign-in-form {
     left: 50%;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+/* 
+li a {text-decoration : none; color : #2d2f31;}
+
+
+nav {
+  width : 300px; 
+  background: #d9d9d9;
+  margin : 40px auto; 
+}
+
+span {
+  padding : 30px;
+  background : #2d2f31; 
+  color : white;
+  font-size : 1.2em;
+  font-variant : small-caps;
+  cursor : pointer;
+  display: block;
+}
+
+span::after {
+  float: right;
+  right: 10%;
+  content: "+";
+}
+
+.slide {
+  clear:both;
+  width:100%;
+  height:0px;
+  overflow: hidden;
+  text-align: center;
+  transition: height .4s ease;
+}
+
+.slide li {padding : 30px;}
+
+#touch {position: absolute; opacity: 0; height: 0px;}    
+
+#touch:checked + .slide {height: 300px;}  */
